--- a/calculator.css
+++ b/calculator.css
@@ -12,7 +12,6 @@ main .container{
     margin: 0 auto;
     width: 400px;
     height: 400px;
-    border: 2px solid #000;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
@@ -20,25 +19,31 @@ main .container{
 main .calculator__display{
     width: 400px;
     text-align: right;
-    height: 100px;
+    height: 80px;
     line-height: 50px;
-    border: 2px solid #000;
     margin: 0 auto;
 }
-
-main .calculator__display .display__operations{
-    height: 40px;
-    font-size: 1.5em;
-    border-bottom: 0.3px solid gray;
-}
-
 main .calculator__display .display__result{
-    height: 60px;
+    height: 80px;
+    align-items: center;
     font-size: 3.5em;
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0 10px;
 }
 
 main .container #btn-0{
     grid-column: 1/3;
+}
+
+.error{
+    height: 20px;
+    color: red;
+    font-size: 1.5em;
+    text-align: right;
+    padding: 0 10px;
+    font-weight: bold;
+    display: none;
 }
 
 main .container #equal{
@@ -48,6 +53,17 @@ main .container #equal{
 
 main .container .key--operator, #clear{
     background-color: rgb(243, 72, 5);
+}
+
+main{
+    min-height: 95vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+main .calc{
+    border: 10px solid #000;
 }
 
 button{
