--- a/calculator.css
+++ b/calculator.css
@@ -36,14 +36,14 @@ main .container #btn-0{
     grid-column: 1/3;
 }
 
-.error{
+main #error-message{
     height: 20px;
     color: red;
     font-size: 1.5em;
     text-align: right;
     padding: 0 10px;
     font-weight: bold;
-    display: none;
+    display: none
 }
 
 main .container #equal{
